--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Inicio de Sesión Navideño</title>
+    <link rel="icon" href="login.png" type="image/png">
+    <title>Inicio de Sesión</title>
 </head>
 <body>
     <div class="background">
-        <img src="navidad.jpg" alt="Imagen Navideña">
+        <img src="digital.jpg" alt="Imagen Navideña">
     </div>
     <div class="snow"></div>
     <div class="container">
